--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "react-helmet-async": "^2.0.3",
     "react-router-dom": "^6.20.1",
     "react-scripts": "5.0.1",
+    "react-transition-group": "^4.4.5",
     "sass": "^1.69.5",
     "web-vitals": "^2.1.0"
   },
